--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,4 +62,6 @@ bHasVoiceEnabled=true
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Menus
 GameDefaultMap=/Game/Maps/Menus
+GameInstanceClass=/Game/BlueprintsLogic/L_GameInstance_BP.L_GameInstance_BP_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
