Commiting All error messages and menu

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -28,4 +28,10 @@ bCompressed=False
 -MapsToCook=(FilePath=)
 +MapsToCook=(FilePath="../../../../../../HyperTech/Unreal/FPSBP/Content/Maps/Menus.umap")
 
+[/Script/Engine.GameMode]
 
++GameModeClassAliases=(ShortName=”DM”,GameClassName=”/Game/BlueprintsLogic/GameModes/L_
+Deathmatch.L_Deathmatch_C”)
+
++GameModeClassAliases=(ShortName=”TDM”,GameClassName=”/Game/BlueprintsLogic/GameModes/L
+_TeamDeathmatch.L_TeamDeathmatch_C”)
